<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="weight_hint">Enter your weight in kilograms</string>
    <string name="height_label">Height (meters)</string>
    <string name="height_hint">Enter your height in meters</string>
    <string name="calculate_button">Calculate BMI</string>
    <string name="result_placeholder">Your BMI will appear here</string>
</resources>
